<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/RadioGroup"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        tools:layout_editor_absoluteX="15dp" />

    <Switch
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/before_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/RadioGroup"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        app:layout_constraintBottom_toTopOf="@id/RadioGroup"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cost_input"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="155dp"
        android:layout_height="151dp"
        android:checkedButton="@id/radioButton2"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_round2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_round3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_round4" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/amount"/>
</androidx.constraintlayout.widget.ConstraintLayout>